--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "author": "daniel <danielotavianopontes@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec 'tsc && tsnd --transpile-only --watch src --cache-directory dist ./src/server.ts' -e ts"
+    "dev": "nodemon --exec '(webpack || exit 0) && tsnd --transpile-only --watch src --cache-directory dist ./src/server.ts' -e ts"
   },
   "devDependencies": {
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@types/node": "^22.1.0",
+    "undici-types": "^6.19.5",
     "ws": "^8.18.0"
   }
 }
